Fix issue with BitBucket buttons wrapping

--- a/bitbucket.css
+++ b/bitbucket.css
@@ -2,6 +2,11 @@
 	border-radius: 0;
 }
 
+.bb-udiff .diff-container .heading .primary {
+	flex-basis: 30%;
+	-webkit-flex-basis: 30%;
+}
+
 .bpr-file-footer {
 	width: 100%;
 	height: 2em;
